start conversion to pageNumber instead of offset
