# Sources/ActivitiesService/Model/Activity/Activity+MySQLDataAccessor.swift
@@ -7,7 +7,7 @@ public protocol ActivityMySQLDataAccessorProtocol {
     func updateActivity(_ activity: Activity) throws -> Bool
     func deleteActivity(withID id: String) throws -> Bool
     func getActivities(withID id: String) throws -> [Activity]?
-    func getActivities(pageSize: UInt, offset: UInt64) throws -> [Activity]?
+    func getActivities(pageSize: UInt, pageNumber: UInt64) throws -> [Activity]?
 }
 
 // MARK: - ActivityMySQLDataAccessor: ActivityMySQLDataAccessorProtocol
@@ -63,12 +63,13 @@ public class ActivityMySQLDataAccessor: ActivityMySQLDataAccessorProtocol {
         return (activities.count == 0) ? nil : activities
     }
 
-    public func getActivities(pageSize: UInt = 10, offset: UInt64 = 0) throws -> [Activity]? {
+    public func getActivities(pageSize: UInt = 10, pageNumber: UInt64 = 0) throws -> [Activity]? {
         let selectBuilder = MySQLQueryBuilder()
             .select(fields: ["id", "name", "emoji", "description", "genre",
             "min_participants", "max_participants", "created_at", "updated_at"], table: "activities")
 
         let result = try execute(builder: selectBuilder)
+        let offset = (UInt64(pageSize) / pageNumber - 1)
         if offset > 0 {
             result.seek(offset: Int64(offset))
         }
