# swagger.yaml
@@ -30,9 +30,9 @@ paths:
           required: false
           type: integer
           format: int64
-        - name: offset
+        - name: pageNumber
           in: query
-          description: Starting index of activities to return.
+          description: Starting index of page to return.
           required: false
           type: integer
           format: int64
@@ -77,18 +77,6 @@ paths:
           in: path
           description: ID of activity to fetch
           required: true
-          type: integer
-          format: int64
-        - name: pageSize
-          in: path
-          description: max number of activities to return
-          required: false
-          type: integer
-          format: int64
-        - name: offset
-          in: path
-          description: starting index of activities to return
-          required: false
           type: integer
           format: int64
       responses:
